--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "expect": "^1.20.1",
     "mocha": "^2.4.5",
+    "sinon": "^4.1.3",
     "std-mocks": "^1.0.1",
     "winston": "^2.2.0"
   },
